k8s/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smtp
spec:
  selector:
    app: smtp
  ports:
  - protocol: TCP
    port: 25
