k8s/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: smtp-network-policy
spec:
  podSelector:
    matchLabels:
      app: smtp
  ingress:
  - from:
    - podSelector:
        matchLabels:
          smtp-access: "true"
